[package]
name = "kslauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
iced = { version = "0.10.0", features = ["image", "tokio"] }
iced_runtime = "0.1.1"
notify = "6.1.1"
tokio = "1.36.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
